# naoOcculusDev

./: .gitignore  README.md
Resources/node-hmd/src/platform/win/LibOVR/Src/Kernel/: OVR_Types.h
face/: CMakeLists.txt
face/build-mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
face/build-mac/sdk/: qitest.json
hello/: CMakeLists.txt  main.cpp
hello/build-mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
hello/build-mac/sdk/: qitest.json
java-sdk/: HeadMovement.java
patches/: README.md  run.py.patch
py/: vision.py
scripts/: data.txt  get_data  get_udp  index.html  nao_camera_viewer.py  package.json  udpsink.sh  winsock.c
video/: videocapture.cpp
video/build-mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
video/build-mac/sdk/: qitest.json
video/build-mac/sdk/share/qi/: path.conf
